# madnis-nlo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
config/: hydra.yaml  integrator_run.yaml
config/diagrams/: eeuug.json  eeuugg.json
config/integrator/: cross_sections.yaml  cross_sections_surrogate.yaml  cuts.yaml  default.yaml  madnis.yaml  multichannel.yaml  vegas.yaml
src/: documenter.py
src/integration/: README.md  integrand.py  integrator.py  main.py  plots.py
src/integration/matrix_element/: README.md  generate_and_patch.py  matrix_element.py  matrix_element_surrogate.py  multiprocessing.py  patch_born.sh  patch_collinear_integrated.sh  patch_loop.sh  patch_real.sh  patch_soft_integrated.sh
src/integration/matrix_element/fortran_apis/: api_collinear_integrated.f  api_soft_integrated.f  api_sreal.f  born_api.f  loop_api.f
src/integration/phase_space/: cluster.py  fks.py  multichannel.py
src/utils/: physics.py  plots_utils.py  plotting.py  typedict.py  utils.py
